# traffic-light

./: CMakeLists.txt  LICENSE
include/: circle.h
src/: circle.cpp  main.cpp
